Fixed an issue causing the tooltip to be misaligned.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@1,100&display=swap");
+@import url(https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@1,100&display=swap);
 
 html {
   font-family: "Public Sans", sans-serif;
@@ -100,6 +100,7 @@ html {
 
 #progress-container {
   --tooltip-x: 0;
+  align-items: center;
   display: flex;
   position: relative;
   width: 85%;
@@ -108,6 +109,7 @@ html {
 #progress-container::before,
 #progress-container::after {
   --tooltip-color: black;
+  align-self: flex-start;
   position: absolute;
   transform: translateX(calc(var(--tooltip-x) - 50%)) translateY(var(--tooltip-y, 0));
 }
@@ -117,7 +119,7 @@ html {
   background: var(--tooltip-color);
   color: white;
   content: attr(data-tooltip);
-  font-size: 1.2em;
+  font-size: 1.2rem;
   padding: 0.25rem;
 }
 
